--- a/user_form/contact.html
+++ b/user_form/contact.html
@@ -14,7 +14,8 @@
     </header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="news.html">News</a>
+        <a href="fetch_news.php">News</a>
+        <a href="insert_news.php">Add News</a>
         <a href="drivers.php">Drivers</a>
         <a href="contact.html">Contact</a>
         <a href="register.html">Register</a>
